# inline-c-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: assert.rs  lib.rs  run.rs
