[package]
name = "inline-c"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2018"
repository = "https://github.com/Hywan/inline-c-rs"

[dependencies]
tempfile = "3.1"
inline-c-macro = { path = "./macros/" }
regex = "1.4"
lazy_static = "1.4"
cc = "1.0"
target-lexicon = "0.11"
assert_cmd = "1.0"
predicates = "1.0"

[workspace]
members = [
    "macros",
]