[package]
name = "inline-c"
version = "0.1.3"
description = "Write and execute C code inside Rust"
license = "BSD-3-Clause"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
repository = "https://github.com/Hywan/inline-c-rs"
homepage = "https://github.com/Hywan/inline-c-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["test", "c", "cpp"]
edition = "2018"

[dependencies]
tempfile = "3.1"
inline-c-macro = { path = "./macros/", version = "0.1" }
regex = "1.4"
lazy_static = "1.4"
cc = "1.0"
target-lexicon = "0.11"
assert_cmd = "1.0"
predicates = "1.0"

[build-dependencies]
rustc_version = "0.3"

[workspace]
members = [
    "macros",
]